# ros_assembly_manager

./: README.md  README.me  requirements.txt
assembly_manager/: package.xml  setup.cfg  setup.py
assembly_manager/assembly_manager/: assembly_manager.py
assembly_manager/launch/: assembly_manager.launch.py
assembly_manager_interfaces/: CMakeLists.txt  package.xml
assembly_manager_interfaces/msg/: AssemblyFrameProperties.msg  AssemblyInstruction.msg  Axis.msg  ComponentProperties.msg  ConstraintPlanes.msg  FrConstraintCentroid.msg  FrConstraintInPlane.msg  FrConstraintOrthogonal.msg  FrConstraintTransform.msg  FrConstraints.msg  GluePtFrameProperties.msg  GrippingFrameProperties.msg  LaserFrameProperties.msg  Object.msg  ObjectScene.msg  Plane.msg  RefFrame.msg  RefFrameProperties.msg  VisionFrameProperties.msg
assembly_manager_interfaces/srv/: CalculateAssemblyInstructions.srv  ChangeParentFrame.srv  CheckLineOfSight.srv  ClearScene.srv  CorrectComponentPosition.srv  CreateAssemblyInstructionFromDescription.srv  CreateAssemblyInstructions.srv  CreateAxis.srv  CreateRefFrame.srv  CreateRefPlane.srv  DestroyObject.srv  DisableObjCollision.srv  FramesForComponent.srv  GetInfo.srv  GetScene.srv  ModifyPose.srv  ModifyPoseAbsolut.srv  ModifyPoseFromFrame.srv  ModifyPoseRelative.srv  ResetFrameProperties.srv  SetCollisionChecking.srv  SetComponentProperties.srv  SetComponentUuid.srv  SetFrameProperties.srv  SpawnComponentFromDescription.srv  SpawnFramesFromDescription.srv  SpawnFromDict.srv  SpawnObject.srv
assembly_scene_publisher/: package.xml  setup.cfg  setup.py
assembly_scene_publisher/assembly_scene_publisher/: assembly_scene_publisher.py
assembly_scene_publisher/assembly_scene_publisher/py_modules/: AssemblyScene.py  AssemblySceneAnalyzer.py  AssemblySceneAnalyzerAdv.py  AssemblySceneModifier.py  AssemblyScenePositionCorrector.py  CentroidConstraintHandler.py  InPlaneConstraintHandler.py  LineOfSightChecker.py  LineOfSightManager.py  OrthogonalConstraintHandler.py  TransformConstraintHandler.py  assembly_scene_message_functions.py  frame_constraints.py  geometry_functions.py  geometry_type_functions.py  helper_functions.py  scene_errors.py  scene_functions.py  tf_functions.py
assembly_scene_publisher/assembly_scene_publisher/testing/: Plane_calc_test.py  tolerance_generator.py
assembly_scene_viewer/: README.md  package.xml  setup.cfg  setup.py
assembly_scene_viewer/assembly_scene_viewer/: assembly_scene_viewer.py
documentation/examples/: S_UFC.STL  Spawn_frames_from_dictionary.json  assembly_instruction_tests.json  spawn_frames_example.json
documentation/tolerance_analyses/: rsap_description.json  rsap_description_lever_0.json  rsap_description_lever_1.json  rsap_description_lever_2.json  rviz_config.rviz  (+3 more)
moveit_component_spawner/: CMakeLists.txt  package.xml
moveit_component_spawner/src/: moveit_component_spawner.cpp
(+323 files in other folders)
